# csl-portfolio

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: deploy-cloudrun.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/server/: __init__.py  main.py
apps/api/server/agents/: __init__.py  base.py  echo.py  google_adk.py  registry.py
apps/api/server/core/: config.py  logging.py  static_files.py
apps/api/server/integrations/: line_client.py
apps/api/server/routes/: chat.py  health.py  webhook.py
apps/api/server/schemas/: chat.py
apps/api/tests/: test_agents.py  test_health.py
apps/web/: .dockerignore  Dockerfile  index.html  nginx.conf.template  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.vue
apps/web/src/components/resume/: AutobioCard.vue  EnglishSection.vue  ExperienceCard.vue  ProfileCard.vue  SidebarPanel.vue
apps/web/src/components/ui/: AppNav.vue  IconButton.vue
apps/web/src/composables/: useChat.ts  useDownload.ts
apps/web/src/data/: resume.ts
apps/web/src/pages/: AgentsPage.vue  AtsResumePage.vue  HomePage.vue  NotFoundPage.vue  ResumePage.vue
apps/web/src/router/: index.ts
apps/web/src/styles/: main.css
apps/web/src/types/: resume.ts
docs/: architecture.md  deploy-cloudrun.md  poppler_install_guide.md  resume_rules.md  tools_usage.md
